# Velo-Protocol-Backend

./: .gitignore  LICENSE  Makefile  README.md  commitlint.config.js  docker-compose.yml  package.json  turbo.json
.github/workflows/: backend-ci.yml  deploy-backend.yml  sdk-publish.yml
docs/: LAUNCH_RUNBOOK.md
docs/legal/: ENTITY_CHECKLIST.md  PRIVACY_POLICY.md  TERMS_OF_SERVICE.md
scripts/: pre-launch-audit.sh
velo-backend/: .dockerignore  .env.example  Dockerfile.api  fly.toml  package.json
velo-backend/db/: migrate.js  migrate.js.map  migrate.ts  seed.js  seed.js.map  seed.ts
velo-backend/db/migrations/: 001_merchants.sql  002_invoices.sql  003_payment_events.sql  004_ledger_entries.sql  005_webhooks.sql  006_settlements.sql  007_reconciler_state.sql  008_rls_policies.sql  009_api_keys.sql  010_gdpr_requests.sql
velo-backend/reconciler/: Cargo.toml  Dockerfile.reconciler
velo-backend/reconciler/src/: config.rs  main.rs  matcher.rs  metrics.rs  processor.rs  stream.rs
velo-backend/src/: app.module.ts  main.ts  tracing.ts
velo-backend/src/auth/: api-key.guard.ts  api-key.strategy.ts  auth.controller.ts  auth.module.ts  auth.service.ts  current-merchant.decorator.ts  jwt.strategy.ts
velo-backend/src/compliance/: compliance.controller.ts  compliance.service.ts
velo-backend/src/config/: env.schema.ts
velo-backend/src/database/: database.module.ts
velo-backend/src/email/: email.service.ts
velo-backend/src/health/: health.controller.ts
velo-backend/src/invoices/: invoices.service.ts  (+1 more)
velo-sdk/: package.json
velo-sdk/src/: index.ts  types.ts
(+28 files in other folders)
