[package]
name = "velo-reconciler"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "velo-reconciler"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "uuid", "bigdecimal", "chrono"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
stellar-strkey = "0.0.8"
anyhow = "1"
tokio-stream = "0.1"
futures-util = "0.3"
bytes = "1"
prometheus = { version = "0.13", features = ["process"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
